# qtspell

./: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  QtSpell.pc.in  README.md  qtspell.spec.in
debian/: changelog.in  control  rules  watch
doc/: Doxyfile.in  qtspell.dox
examples/: example.cpp  example.hpp
locale/: QtSpell_af.ts  QtSpell_ak.ts  QtSpell_be.ts  QtSpell_ca.ts  QtSpell_cs.ts  QtSpell_da.ts  QtSpell_de.ts  QtSpell_el.ts  QtSpell_eo.ts  QtSpell_es.ts  QtSpell_es_ES.ts  QtSpell_eu.ts  QtSpell_ff.ts  QtSpell_fi.ts  QtSpell_fo.ts  QtSpell_fr.ts  QtSpell_ga.ts  QtSpell_gl.ts  QtSpell_he.ts  QtSpell_hr.ts  QtSpell_hu.ts  QtSpell_hy.ts  QtSpell_id.ts  QtSpell_is.ts  QtSpell_it.ts  QtSpell_ja.ts  QtSpell_ky.ts  QtSpell_lg.ts  QtSpell_lt.ts  QtSpell_lv.ts  QtSpell_mn.ts  QtSpell_ms.ts  QtSpell_nb.ts  QtSpell_nl.ts  QtSpell_nso.ts  QtSpell_pl.ts  QtSpell_pt.ts  QtSpell_pt_BR.ts  QtSpell_rm.ts  QtSpell_ro.ts  (+17 more)
packaging/: qtspell.spec.in
packaging/debian/: changelog.in  control  copyright  docs  libqtspell-qt4-0.install  libqtspell-qt4-dev.docs  libqtspell-qt4-dev.install  libqtspell-qt5-0.install  libqtspell-qt5-dev.docs  libqtspell-qt5-dev.install  rules
src/: Checker.cpp  Checker_p.hpp  Codetable.cpp  Codetable.hpp  QtSpell.cpp  QtSpell.hpp  QtSpell_p.hpp  TextEditChecker.cpp  TextEditChecker_p.hpp  UndoRedoStack.cpp  UndoRedoStack.hpp
